# electron-gqlmapi

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  test.js
.github/workflows/: windows.yml
__snapshots__/: test.js.snap
lib/: index.js  preload.js  start.js
scripts/: build.cmd  debug.cmd  prepare.cmd  test.cmd
src/: CMakeLists.txt  NodeBinding.cpp
src/test/: test.js
src/test/__snapshots__/: test.js.snap
